force-app/main/default/objects/TREX1__Add_On__c/fields/Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Contact_ID__c</fullName>
    <formula>CASESAFEID(
  IF( !ISBLANK( TREX1__Membership__c ), 
    TREX1__Membership__r.TREX1__Contact__c,
    IF( !ISBLANK( TREX1__Registration__c ),
      TREX1__Registration__r.TREX1__Contact__c,
      IF( !ISBLANK( TREX1__Rental_Contract__c ),
        TREX1__Rental_Contract__r.TREX1__Contact__c,
        &quot;&quot;
      )
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact ID</label>
    <type>Text</type>
</CustomField>