force-app/main/default/objects/TREX1__Add_On__c/fields/Inventory_Item_Name__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Item_Name__c</fullName>
    <formula>TREX1__Inventory_Item__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inventory Item Name</label>
    <type>Text</type>
</CustomField>